--- a/day10/exam01_scss/src/App.css
+++ b/day10/exam01_scss/src/App.css
@@ -49,3 +49,31 @@
   margin: 4px 2px;
   cursor: pointer;
 }
+
+.myui.nav {
+  margin: 0px;
+}
+
+.myui.nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.myui.nav ul li {
+  float: left;
+}
+
+.myui.nav ul li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.myui.nav .activate {
+  background-color: grey;
+}
